Fix overflow issue

--- a/styles.css
+++ b/styles.css
@@ -204,7 +204,6 @@ li {
   justify-content: center;
   border-radius: 25px;
   padding-top: 16px;
-  overflow: hidden;
 }
 
 #portfolio-details img {
